--- a/src/sections/about.css
+++ b/src/sections/about.css
@@ -31,7 +31,7 @@
 
 .details
 {
-  margin: 45px 110px 32px 520px; /*top right bottom left */
+  margin: 3% 5% 3% 35%; /*top right bottom left */
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -48,7 +48,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  margin: 0 0 30px 0;   
+  margin: 0 0 2% 0;   
 }
 
 .about_text
