--- a/src/sections/projects.css
+++ b/src/sections/projects.css
@@ -18,23 +18,21 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    align-items: flex-start;
     gap: 100px;
+    align-self: center;
 }
 
 .project_panel
 {
+    width: 100%;
     height: max-content;
     align-self: stretch;
-    display: flex;
-
+    display: inline-flex;
 }
 
 .project_button
 {
-    width: 890px;
-    height: 500px;
-
+    min-width: 50%;
     border-radius: 25px;
     border: 5px solid var(--Medium-Slate-Blue, #6F73D2);
     background: var(--Midnight-Violet, #171228);
@@ -42,10 +40,26 @@
 
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+
+    flex-grow: 4;
+    flex-shrink: 0.5;
+}
+
+.project_highlight
+{
+    width: 100%;
+    min-height: 300px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 0% 50%;
+    flex-grow: 4;
 }
 
 .project_details
 {
+    max-width: 50%;
+    min-width: 50%;
     display: inline-flex;
     align-self: top;
     align-items: self-start;
@@ -56,7 +70,7 @@
 
 .project_name
 {
-    font-size: 56px;
+    font-size: 50px;
     font-weight: 700;
     background: linear-gradient(180deg, #FFC933 60%, #B88C14 100%);
     background-clip: text;
